--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,8 @@
       <display-name>WebMarket Security</display-name>
       <web-resource-collection>
          <web-resource-name>WebMarket</web-resource-name>
-         <url-pattern>/addProduct.jsp</url-pattern>
-         <url-pattern>/editProduct.jsp</url-pattern>
+         <!-- <url-pattern>/addProduct.jsp</url-pattern>
+         <url-pattern>/editProduct.jsp</url-pattern> -->
       </web-resource-collection>
       <auth-constraint>
          <description>권한 관리자명</description>
